--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
   background-color: #09090a;
   color: white;
+
   height: 100vh;
 }
 
@@ -14,24 +15,50 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
   padding: 48px;
+
+  position: fixed;
+  width: 100%;
+  background-color: #09090a;
 }
 
-form {
+button {
+  padding: 16px 24px;
+  border-radius: 8px;
+  border: 1px solid #8b5cf6;
+  background-color: transparent;
+  color: white;
+
   display: flex;
-  padding: 0 48px;
+  align-items: center;
+  gap: 12px;
+
+  font-family: 'Inter';
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 125%;
+}
+
+#form-habits {
+  display: flex;
+
+  padding: 182px 48px 48px;
+  width: fit-content;
 }
 
 .habits {
   margin-top: 60px;
   display: flex;
   flex-direction: column;
+
   gap: 24px;
 }
 
 .habit {
   width: 64px;
   height: 64px;
+
   font-size: 32px;
 
   display: flex;
@@ -57,25 +84,10 @@ form {
   font-family: 'Roboto Mono';
   font-size: 20px;
   line-height: 125%;
+
   color: #a1a1aa;
+
   text-align: center;
-}
-
-button {
-  padding: 16px 24px;
-  border-radius: 8px;
-  border: 1px solid #8b5cf6;
-  background-color: transparent;
-  color: white;
-
-  display: flex;
-  align-items: center;
-  gap: 12px;
-
-  font-family: 'Inter';
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 125%;
 }
 
 input {
@@ -87,6 +99,7 @@ input {
 
   border: 2px solid #27272a;
   border-radius: 8px;
+
   background: #18181b;
 }
 
@@ -94,4 +107,10 @@ input {
 input:checked {
   background: #8b5cf6;
   border: 2px solid #a78bfa;
+}
+
+@media (max-width: 570px) {
+  button div {
+    display: none;
+  }
 }
